fixing up spacing on figures

--- a/styles/base/block-elements.css
+++ b/styles/base/block-elements.css
@@ -23,7 +23,19 @@ li p{margin: 0px; padding: 0px;}
 
 
 /* FIG *********/
-.fig{padding: 0px; margin: 0px; font-style: italic; font-size: .9rem; display: block; clear: both; overflow: auto;}
+.fig{
+    padding: 0px; 
+    margin: 10px 0px 0px 0px; /* Same margins as a section */
+    display: block; 
+    clear: both; 
+    overflow: auto;
+}
+.fig>.p:first-child{margin-top: 0px;} /* Same margin correction as a section */
+
+figcaption {
+    font-style: italic; 
+    font-size: .9rem; 
+}
 
 /* FIG Alignment *********/
 .fig-result{margin: 10px 0px 20px 75px; padding: 15px; display: table; width: 600px; }
